# man-pages

./: .gitignore  CMakeLists.txt  README  README.md  _config.yml  autocrop.md  dcm2mnc.md  ecattominc.md  index.md  invert_raw_image.md  minc_modify_header.md  mincaverage.md  mincblob.md  mincblur.md  minccalc.md  minccmp.md  mincconcat.md  mincconvert.md  minccopy.md  mincdiff.md  mincdump.md  mincedit.md  mincexpand.md  mincextract.md  mincgen.md  mincheader.md  mincinfo.md  minclookup.md  mincmakescalar.md  mincmakevector.md  mincmath.md  mincresample.md  mincreshape.md  mincsample.md  mincstats.md  minctoecat.md  minctoraw.md  minctracc.md  mincview.md  mincwindow.md  (+15 more)
_exp/: Display.css  Display.html  Display.md
_man/: autocrop.md  dcm2mnc.md  ecattominc.md  invert_raw_image.md  minc_modify_header.md  mincaverage.md  mincbeast.md  mincblob.md  mincblur.md  minccalc.md  minccmp.md  mincconcat.md  mincconvert.md  minccopy.md  mincdiff.md  mincdump.md  mincedit.md  mincexpand.md  mincextract.md  mincgen.md  mincheader.md  mincinfo.md  minclookup.md  mincmakescalar.md  mincmakevector.md  mincmath.md  mincresample.md  mincreshape.md  mincsample.md  mincstats.md  minctoecat.md  minctoraw.md  minctracc.md  mincview.md  mincwindow.md  mnc2nii.md  mrisim.md  mritoself.md  mritotal.md  nii2mnc.md  (+11 more)
_wip/: skeleton.md
